# work_tui_rust

./: .gitignore  2  Cargo.toml
archive/: app.rs  main.rs
archive/components/: datatable.rs  mod.rs  navigation.rs
archive/inline_src/: download.rs  main.rs  ui.rs
archive/new_page/src/: components.rs  pages.rs
archive/new_page/src/components/: footer.rs
archive/new_page/src/pages/: dashboard.rs  email.rs  root.rs
archive/new_page/src/styles/: constants.rs  theme.rs
archive/nice_demo/src/: app.rs  colors.rs  constants.rs  main.rs  root.rs  tabs.rs  term.rs  theme.rs
archive/nice_demo/src/tabs/: about.rs  email.rs
archive/passphrase/src/: app.rs  constants.rs  db.rs  main.rs  password_model.rs  ui.rs
archive/src/: app.rs  main.rs  styles.rs
archive/src/components/: navbar.rs  page_layout.rs
archive/src/pages/: dashboard.rs  home.rs  traceroute.rs
archive/src/styles/: colors.rs
archive/ui/: mod.rs
src/: app.rs  main.rs
src/components/: footer.rs  header.rs  mod.rs  page_content.rs  page_layout.rs  sidebar.rs  window.rs
src/constants/: colors.rs  header.rs  mod.rs
src/pages/: dashboard.rs  form.rs  mod.rs  records.rs
src/styles/: theme.rs
