[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
arboard = "3.2.1"
crossterm = "0.27.0"
dirs = "5.0.1"
itertools = "0.11.0"
log = "0.4.20"
palette = "0.7.3"
rand = "0.8.5"
ratatui = { version = "0.22.0", features = ["all-widgets", "crossterm"] }
rpassword = "7.2.0"
rusqlite = { version = "0.29.0", features = ["bundled-sqlcipher"] }
time = "0.3.25"
tui-input = "0.8.0"
unicode-width = "0.1.10"
